# animus

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  FEATURES.md  README.md  SKILL.md  plugin.json  reasonix.toml
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: README.md  cmake-build-doctor.md  harness-feature-planner.md
.claude/animus/: config.toml  config.user.toml  domain-lexicon.md  feature-detail.md  features.json  plan-context.md  project-config.json
.claude/commands/: check-consistency.ps1  code-check.md  code-plan.md  code-setup.md  harness-code-review.md  harness-code-setup.md  harness-code-setup.ps1  review.md  setup.md  validate-features.ps1
.claude/docs/: TEMPLATES.md
.claude/hooks/: hooks.json
.claude/rules/: coding-style.md  git-workflow.md  qt-best-practices.md  testing.md
.claude/scripts/: session-catchup.py
.claude/templates/: .mcp.json  CLAUDE.md  init-project.ps1
.claude/templates/new_project/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.template
.claude/templates/new_project/cmake/: FindVLD.cmake
.claude/templates/new_project/docs/: 00-prd.md  01-task-breakdown.md  README.md
.claude/templates/new_project/docs/progress/: T000-template.md
.claude/templates/new_project/include/: README.md
.claude/templates/new_project/src/: mainwindow.cpp.template  mainwindow.h.template
.claude/templates/new_project/tests/: test_smoke.cpp.template
.claude/templates/new_project/ui/: dialog_base.ui.template  mainwindow.ui.template
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.reasonix/: desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
.serena/: project.yml
agents/base/: task-implementer-core.md  test-engineer-core.md
agents/cpp-cmake/: architect.md
agents/frontend/: feature-planner-frontend.md
agents/go/: architect.md  test-engineer.md
agents/node/: architect.md  test-engineer.md  ui-reviewer.md
agents/python/: architect.md  test-engineer.md
agents/qt/: architect.md  task-implementer.md  test-engineer.md  ui-reviewer.md
agents/rust/: architect.md  test-engineer.md
agents/universal/: acceptance-auditor.md  build-doctor.md  code-reviewer.md  edge-case-hunter.md  feature-planner.md  ponytail-reviewer.md  task-implementer.md  test-engineer.md
commands/: animus-archive.md  animus-config.md  animus-continue.md  animus-debug.md  animus-dev.md  animus-handoff.md  animus-help.md  animus-init.md  animus-party.md  animus-plan.md  animus-review.md  animus-setup.md  animus-setup.ps1  animus-status.md  animus-status.ps1  check-consistency.ps1  code-check.md  code-setup.md  harness-code-archive.md  harness-code-continue.md  harness-code-debug.md  harness-code-handoff.md  harness-code-plan.md  harness-code-review.md  harness-code-setup.md  harness-code-setup.ps1  validate-append-only.ps1  validate-features.ps1
docs/: ENCODING.md  HOOK-DEBUGGING.md  README.md  TEMPLATES.md  agent-index.md  architecture.md  bmad-optimization-roadmap.md  dev-verification-plan.md  development-plan.md  guide.md  plugin-validator-guide.md  task-01-named-agents.md  task-02-memlog-persistence.md  task-03-animus-help.md  task-04-工作流地图.md  task-05-QuickDev.md  task-06-多IDE引擎抽离.md  task-07-对抗性审查.md  task-08-头脑风暴.md  task-09-write-gate-hook.md  task-09-三层定制与团队配置.md  task-10-SPEC内核.md  task-10-scriptify-commands.md  task-agent-menus.md  task-debug-merge-dev.md  task-docs-quadrant.md  task-party-mode-辩论模式.md  task-plugin-validator.md
docs/explanation/: memlog-design.md  state-machine.md
docs/how-to/: add-new-agent.md  configure-review.md  customize-hooks.md
docs/reference/: commands.md  config-options.md  hooks-registry.md  testing.md
docs/tutorials/: getting-started.md
hooks/: hooks.json
hooks/scripts/: clang-format.ps1  clang-format.py  clang-format.sh  format-all.py  pre-compact.ps1  pre-compact.py  pre-compact.sh  pre-tool-use.ps1  pre-tool-use.py  pre-tool-use.sh  stop-check.ps1  stop-check.py  stop-check.sh  write-gate.ps1  write-gate.py  write-gate.sh
rules/cpp-cmake/: best-practices.md  encoding.md
rules/frontend/: component-guidelines.md
rules/go/: best-practices.md
rules/rust/: best-practices.md
rules/universal/: coding-style.md  requirements-tracking.md  testing.md
scripts/: animus-engine.py  animus_init.py  archive-iteration.py  config_loader.py  deferred_work.py  format-log.py  gap-analysis.py  memlog.py  migrate-to-memlog.py  plugin-validator.py  post-push.sh  run-regression.py  session-catchup.py  show-status.py  test-show-status.py  update-progress.py  validate-features.py
scripts/engine/: __init__.py  cmd_archive.py  cmd_rebuild.py  cmd_status.py  cmd_transition.py  cmd_validate.py
skills/brainstorming/: PRFAQ.md  SCAMPER.md  SKILL.md  bad-guy-test.md  competitor-evaluation.md  first-principles.md  reverse-thinking.md
skills/party-mode/: SKILL.md
skills/systematic-debugging/: SKILL.md  condition-based-waiting.md  defense-in-depth.md  root-cause-tracing.md
skills/tdd-workflow/: SKILL.md
templates/: .clang-format  .mcp.json  init-project.ps1  init_project.py
templates/animus/: README.md  coding-session.ps1  coding_session.py  feature-detail.md  features.json  findings.md  init.ps1  init.py  iteration-summary.md  plan-context.md  project-config.json  run-regression.ps1  show-status.py  update-progress.ps1
templates/existing_project/: CLAUDE.md  cmake-adapter.md  review-checklist.md
templates/harness/: README.md  coding-session.ps1  domain-lexicon.md  feature-detail.md  init.bat  init.ps1  plan-context.md  project-config.json  run-regression.ps1  task_plan.md  (+3 more)
tests/: _run_main_helpers.py  test_animus_init.py  test_config_loader.py  test_deferred_work.py  test_engine.py  test_engine_extras.py  test_hooks.py  test_hooks_extras.py  test_plugin_validator.py  test_scripts.py  test_templates.py
(+128 files in other folders)
